=========
Changelog
=========

1.1.0 (unreleased)
==================

- Plone 4 support added [cekk]
- Added Site Administrator role in rolemap and workflows [cekk]
- Fixed translation for month in folder view [cekk]
- Fixed mailhost send method (removed securesend) [cekk]
- Created new event raised when a booking is rescheduled [cekk]
- Added new contentrule that notify an user when his booking has re-scheduled [cekk]
- Added locales support [cekk]
- Fixed layout styles and accessibility [keul]
- Do not show reservation object in navigation [keul]
- Removed useless portal_skins elements [keul]
- Removed bad ploneCustom.css css, moved to a dedicated CSS [keul]
- Content types are now in english and translated [keul]

1.0.2 (2012/09/07)
==================

- Minor fixes for public release

1.0.1 (2012/01/24)
==================

- Fix overbooking (#127)

1.0 (2011-11-30)
==================

- Initial release