@@ -11,7 +11,7 @@
   <property name="factory">addPrenotazioniFolder</property>
   <property name="immediate_view">atct_edit</property>
   <property name="global_allow">True</property>
-  <property name="filter_content_types">False</property>
+  <property name="filter_content_types">True</property>
   <property name="allowed_content_types">
     <element value="Prenotazione"/>
   </property>
